--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "spudnik",
 	"description": "Spudnik is a free and open source Discord chat bot focused on guild management and adding interesting and useful functionality to your server. It was built on top of some of the most popular and widely used frameworks for extendibility, and written with organization and stability in mind. It also ships with ZERO weeb commands/references!",
-	"version": "0.10.5",
+	"version": "0.10.6",
 	"license": "Apache-2.0",
 	"readme": "README.md",
 	"engines": {
@@ -30,6 +30,7 @@
 		"@discordjs/uws": "^11.149.1",
 		"@scoutsdk/server-sdk": "^0.7.0",
 		"axios": "^0.19.0",
+		"bufferutil": "^4.0.1",
 		"chalk": "^2.4.2",
 		"d20": "^1.4.1",
 		"date-fns": "^1.30.1",
@@ -44,6 +45,8 @@
 		"soap": "^0.29.0",
 		"urban-dictionary": "^2.2.1",
 		"url-unshort": "^5.0.0",
+		"utf-8-validate": "^5.0.2",
+		"zlib-sync": "^0.1.6",
 		"zucc": "^0.1.2"
 	},
 	"devDependencies": {
