--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "clean:all": "npm run clean:node_modules && npm run clean:dist",
         "clean:node_modules": "rimraf ./node_modules",
         "clean:dist": "rimraf ./dist",
-        "build": "tsc && copyfiles -u 2 \"./dist/src/*.js\" \"./dist/src/**/*.json\" \"./dist/src/**/*.js\" \"./dist/src/**/*.js.map\" ./dist && rimraf \"./dist/src\"",
+        "build": "tsc",
         "test": "npm run lint",
         "prestart": "npm run clean:dist && npm run build",
         "start": "npm run start:prod",
@@ -58,14 +58,12 @@
     },
     "devDependencies": {
         "@discordjs/collection": "0.1.5",
-        "@types/chalk": "2.2.0",
         "@types/common-tags": "1.8.0",
         "@types/module-alias": "2.0.0",
         "@types/node": "10.17.18",
         "@typescript-eslint/eslint-plugin": "2.27.0",
         "@typescript-eslint/parser": "2.27.0",
         "common-tags": "1.8.0",
-        "copyfiles": "2.2.0",
         "eslint": "6.8.0",
         "eslint-config-klasa": "dirigeants/klasa-lint",
         "eslint-plugin-import": "2.20.2",
