--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ branches:
 before_install:
 - export AUTHOR_NAME="$(git log -1 $TRAVIS_COMMIT --pretty="%aN")"
 script:
+- echo '*** BUILDING ***'
 - tsc
 after_success:
 - chmod +x ./scripts/build_success.sh
@@ -18,17 +19,18 @@ after_failure:
 - chmod +x ./scripts/build_fail.sh
 - "./scripts/build_fail.sh"
 before_deploy:
-- rm -rf docs
 - rm -rf node_modules
-- rm -rf src
-- rm -f tsconfig.json
-- rm -f tslint.json
-- rm -f typings.json
-- rm -f typings.d.ts
-- rm -f code-of-conduct.md
-- rm -f CODEOWNERS
+- rm -f README.md
+- rm -f renovate.json
+- rm -rf scripts
+- rm -f nodemon.json
 - |
   if [ -n "$TRAVIS_TAG" ]; then
+    rm -rf src
+    rm -f tsconfig.json
+    rm -f tslint.json
+    rm -f typings.json
+    rm -f typings.d.ts
     zip -r release.zip dist/ config/ package.json README.md LICENSE
     mkdir -p dpl_cd_upload
     mv release.zip dpl_cd_upload/release.zip
