--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "devDependencies": {
         "@discordjs/collection": "0.1.5",
         "@types/common-tags": "1.8.0",
+        "@types/js-base64": "^2.3.1",
         "@types/module-alias": "2.0.0",
         "@types/node": "10.17.21",
         "@typescript-eslint/eslint-plugin": "2.31.0",
@@ -71,6 +72,7 @@
         "eslint-plugin-node": "11.1.0",
         "eslint-plugin-prefer-arrow": "1.2.1",
         "eslint-plugin-unicorn": "19.0.1",
+        "js-base64": "^2.5.2",
         "nodemon": "1.19.4",
         "typescript": "3.8.3"
     },
