--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "discord.js": "discordjs/discord.js#fe7df70",
         "erlpack": "github:discordapp/erlpack",
         "js-base64": "2.5.2",
-        "klasa": "github:dirigeants/klasa#sgn",
+        "klasa": "github:dirigeants/klasa#settings",
         "leet": "^1.3.0",
         "markdown-escape": "1.0.2",
         "module-alias": "^2.2.2",
